# uparse

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  demo.py  download.py  install.sh  pyproject.toml  ruff.toml  server.py
docker/: .env.example  .env.uparse  docker-compose.yaml
python-sdk/: pyproject.toml
python-sdk/pyparse_client/: __init__.py  pyparse.py
uparse/: __init__.py  models.py
uparse/parser/: __init__.py  _base.py
uparse/parser/documents/: csv_parser.py  excel_parser.py  text_parser.py  word_parser.py
uparse/parser/documents/pdf_parser/: models.py  pdf_parser.py  utils.py
uparse/parser/media/: media_paser.py
uparse/pipeline/: __init__.py  callback.py  pipeline.py  schema.py
uparse/pipeline/chunking/: __init__.py
uparse/pipeline/csv/: pipeline.py
uparse/pipeline/docx/: pipeline.py
uparse/pipeline/excel/: pipeline.py
uparse/pipeline/media/: pipeline.py
uparse/pipeline/pdf/: __init__.py  _base.py  pipeline.py  utils.py
uparse/pipeline/pdf/basic/: align.py  basic.py  watermark.py
uparse/pipeline/pdf/dumper/: dumper.py  utils.py
uparse/pipeline/pdf/equation/: equation.py
uparse/pipeline/pdf/image/: image.py
uparse/pipeline/pdf/layout/: layout.py
uparse/pipeline/pdf/marker/: settings.py
uparse/pipeline/pdf/ocr/: detection.py  ocr.py
uparse/pipeline/pdf/order/: order.py
uparse/pipeline/text/: pipeline.py
uparse/routes/: parse.py
uparse/storage/: __init__.py  storage.py
uparse/types/: __init__.py  document.py
uparse/utils/: __init__.py  art.py  convert.py  gpu.py  image.py  watermark.py
(+54 files in other folders)
