[tool.poetry]
name = "uparse"
version = "0.0.1"
description = "API to convert Documents | Media | Webpage into Structured Markdown for LLM usecases"
authors = ["Adithya S K <adithyaskolavi@gmail.com>"]
license = "Apache"
readme = "README.md"
keywords = ["pdf", "markdown", "ocr", "parse"]
include = [
    "server.py",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">2.0.0"
torch = "^2.4.1"
loguru = "^0.7.2"
transformers = "^4.45.1"
art = "^6.3"
img2pdf = "^0.5.1"
pypdfium2 = "^4.30.0"
arrow = "^1.3.0"
fastapi = "^0.115.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
torchvision = "^0.19.1"
langchain-community = "^0.3.1"
python-docx = "^1.1.2"
moviepy = "^1.0.3"
python-multipart = "^0.0.12"
uvicorn = "^0.31.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[tool.poetry.group.test.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.0"
ruff = "^0.6.3"
pre-commit = "^3.8.0"


[tool.poetry.group.marker.dependencies]
marker-pdf = "^0.2.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
